[tool.poetry]
name = "ropeheart"
version = "0.1.0"
description = ""
authors = [
    "PurpleDev <65060124+PurpleDevAu@users.noreply.github.com>",
    "Leigh Brenecki <l@leigh.net.au>",
]

[tool.poetry.dependencies]
python = "^3.7"
pyusb = "^1.0.2"
openant = {git = "https://github.com/Tigge/openant"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
